--- a/_sass/bio.scss
+++ b/_sass/bio.scss
@@ -6,7 +6,18 @@
 }
 
 .bio > p {
+    color: #606060;
     font-family: "Libre Baskerville", serif;
     line-height: 1.3;
     word-wrap: break-word;
+}
+
+.bio > h2 > a {
+    color: #606060;
+    text-decoration: none;
+}
+
+.bio > h2 > a:hover {
+    color: #b83020;
+    text-decoration: underline;
 }
